--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,15 @@
         <artifactId>hibernate-core</artifactId>
         <version>5.4.9.Final</version>
     </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.1</version>
+        </dependency>
 
-    <dependency>
+
+        <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
         <version>8.0.18</version>
